--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
     <h2>Contact details:</h2>
     <ol>
       <li>Phone Number:9840983499</li>
-      <li>Email Address:adist1340@gmail.com</li>
+      <li>Email Address:adithyast@yahoo.com</li>
     </ol>
-<form class="" action="mailto:adist1340@gmail.com" method="post" enctype="text/plain">
+<form class="" action="mailto:adithyast@yahoo.com" method="post" enctype="text/plain">
   <label>Your Name:</label>
   <input type="text" name="yourName" value=""></input>
   <br>
