--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+  <body>
+    <video controls autoplay>
+ <source src="rick roll.mp4" type="video/mp4">
+</video>
+ <h1>༼ʘ̚ل͜ʘ̚༽</h1>
   <table cellspacing="20">
     <tr>
       <td><img src="circle-cropped.png" alt="Adi"width="200" height="200"></td>
